chore: further refining